flux/apps/arr/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: default
spec:
  selector:
    matchLabels:
      app: readarr
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
        - name: readarr
          image: lscr.io/linuxserver/readarr:0.4.18-develop
          resources:
            requests:
              cpu: 18m
              memory: 262Mi
            limits:
              memory: 262Mi
          ports:
            - containerPort: 8787
          volumeMounts:
            - name: readarr-data
              mountPath: /config
            - name: media-books
              mountPath: /books
            - name: media-audiobooks
              mountPath: /audiobooks
            - name: qbt-downloads
              mountPath: /downloads
      volumes:
        - name: readarr-data
          nfs:
            server: datasphere
            path: /Root/Volumes/readarr
        - name: media-books
          nfs:
            server: datasphere
            path: /Root/Media/Books
        - name: media-audiobooks
          nfs:
            server: datasphere
            path: /Root/Media/Audiobooks
        - name: qbt-downloads
          nfs:
            server: datasphere
            path: /Root/Volumes/qbt/downloads
