flux/apps/arr/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: default
spec:
  selector:
    app: readarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8787
