flux/apps/arr/readarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`readarr.home`)
      kind: Rule
      services:
        - name: readarr
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`readarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: readarr
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: readarr
          port: 80
  tls:
    secretName: cert-readarr
